removed line numbering
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12247 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -10,7 +10,7 @@
 \usepackage{enumitem}
 
 % TODO: only for draft
-\usepackage{lineno}
+%\usepackage{lineno}
 
 %----------------------------------------------------------------------------
 
@@ -64,7 +64,7 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 %--------------------------------------------------
 
 % TODO: only for draft
-\linenumbers
+%\linenumbers
 
 \input introduction.tex
 
