Started EPJ C version.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12390 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/authorlist_data.tex
+++ b/2013/1km paper/authorlist_data.tex
@@ -33,8 +33,7 @@
 	\AddAuthor{J.~Hammerbauer}{1a}{}{}%
 	\AddAuthor{J.~Heino}{3a}{}{}%
 	\AddAuthor{A.~Karev}{9}{}{}%
-%	\AddAuthor{J.~Ka\v{s}par}{1b}{9}{}%
-	\AddCorrespondingAuthor{J.~Ka\v{s}par}{1b}{9}{}{Corresponding author at: CERN, Geneva, Switzerland.}{jan.kaspar@cern.ch}%
+	\AddAuthor{J.~Ka\v{s}par}{1b}{9}{}%
 	\AddAuthor{J.~Kopal}{1b}{}{}%
 	\AddAuthor{V.~Kundr\'{a}t}{1b}{}{}%
 	\AddAuthor{S.~Lami}{7a}{}{}%
