--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -40,7 +40,7 @@
 
 \bibitem{prl68}
 	\Name{N.~A.~Amos et al.}
-	\Review{Phys.~Rev.~Lett.}{68}{1992}{2433–2436}.
+	\Review{Phys.~Rev.~Lett.}{68}{1992}{2433 -- 2436}.
 
 \bibitem{wy68}
 	\Name{G.~B.~West and D.~R.~Yennie}
@@ -50,7 +50,7 @@
 
 \bibitem{dremin-dispersion}
 	\Name{I.~M.~Dremin}
-	\Review{JETP Lett.}{97}{2013}{571--573},
+	\Review{JETP Lett.}{97}{2013}{571 -- 573},
 	arXiv:1304.5345; and references therein.
 
 \bibitem{8tev-90m}
@@ -121,7 +121,7 @@
 
 \bibitem{block96}
 	\Name{M.~M.~Block}
-	\Review{Phys.~Rev.~D}{54}{1996}{4337--4343}.
+	\Review{Phys.~Rev.~D}{54}{1996}{4337 -- 4343}.
 	%title = {Are we really measuring the phase of the nuclear scattering amplitude?},
 	%doi = {10.1103/PhysRevD.54.4337},
 	
@@ -138,7 +138,7 @@
 
 \bibitem{elegent}
 	\Name{J.~Ka\v spar}
-	\Review{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
+	\Review{Comp.~Phys.~Comm.}{185}{2014}{1081 -- 1084}
 	%title = "Elegent—An elastic event generator ",
 	%number = "3",
 	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
@@ -157,27 +157,27 @@
 
 \bibitem{bailly87}
 	\Name{J.~L.~Bailly \etal{}~(EHS-RCBC Collaboration)}
-	\Review{Z.~Phys.~C}{37}{1987}{7--16}.
+	\Review{Z.~Phys.~C}{37}{1987}{7 -- 16}.
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
 	%url={http://dx.doi.org/10.1007/BF01442063}
 
 \bibitem{klk02}
 	\Name{V.~Kundr\' at, M.~Lokaj\' i\v cek and D.~Krupa}
-	\Review{Phys.~Lett.~B}{544}{2002}{132--138}.
+	\Review{Phys.~Lett.~B}{544}{2002}{132 -- 138}.
 	%title = "Impact parameter structure derived from elastic collisions ",
 	%number = "1–2",
 	%doi = "http://dx.doi.org/10.1016/S0370-2693(02)02481-4",
 
 \bibitem{kl96}
 	\Name{V.~Kundr\' at and M.~Lokaj\' i\v cek}
-	\Review{Mod.~Phys.~Lett.~A}{11}{1996}{2241--2250}.
+	\Review{Mod.~Phys.~Lett.~A}{11}{1996}{2241 -- 2250}.
 	%title = {DESCRIPTION OF HIGH-ENERGY ELASTIC HADRON SCATTERING IN BOTH THE COULOMB AND HADRONIC DOMAINS},
 	%number = {28},
 	%doi = {10.1142/S021773239600223X},
 
 \bibitem{kl05}
 	\Name{V.~Kundr\' at and M. Lokaj\' i\v cek}
-	\Review{Phys.~Lett.}{B611}{2005}{102--110}.
+	\Review{Phys.~Lett.}{B611}{2005}{102 -- 110}.
     %Interference between Coulomb and hadronic scattering in elastic high-energy nucleon collisions
     %doi            = "10.1016/j.physletb.2005.02.025",
 
