--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -38,7 +38,7 @@ In the close and distant diagonals a total of 190k and 162k elastic event candid
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/trigger_rate.pdf}
-\vskip-3mm
+%\vskip-3mm
 \caption{%
 Trigger rates as a function of time from the beginning of the run. The T2 rate (blue) is roughly proportional to luminosity, while the RP rate (red) is in addition sensitive to beam-halo level. The yellow bands represent periods of uninterrupted data taking.
 }
