--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -34,7 +34,7 @@ diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
 This article uses a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring), $y$ the vertical axis (pointing against gravity) and $z$ the beam axis (in the clockwise direction).
 
-\begin{figure}
+\begin{figure*}
 \begin{center}
 \includegraphics{fig/elastic_principle.pdf}
 \hfil
@@ -44,4 +44,4 @@ Left: schematic view of the RP stations on both sides of IP5 with two proton tra
 }
 \label{fig:rpsketch}
 \end{center}
-\end{figure}
+\end{figure*}
