--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -4,7 +4,10 @@
 The beam optics relates the proton kinematical states at the IP and at the RP location. A proton emerging from the interaction vertex $(x^*$, $y^*)$ at the angle $(\theta_x^*,\theta_y^*)$ (relative to the $z$ axis) and with momentum $p\,(1+\xi)$, where $p$ is the nominal initial-state proton momentum, is transported along the outgoing beam through the LHC magnets. It arrives at the RPs in the transverse position
 \begin{equation}
 \label{eq:prot trans}
-x(z_{\rm RP}) = L_x(z_{\rm RP})\, \theta_x^*\ +\ v_x(z_{\rm RP})\, x^*\ +\ D_x(z_{\rm RP})\, \xi\ ,\quad y(z_{\rm RP}) = L_y(z_{\rm RP})\, \theta_y^*\ +\ v_y(z_{\rm RP})\, y^*\ +\ D_y(z_{\rm RP})\, \xi \quad
+	\begin{aligned}
+		x(z_{\rm RP}) =& L_x(z_{\rm RP})\, \theta_x^*\ +\ v_x(z_{\rm RP})\, x^*\ +\ D_x(z_{\rm RP})\, \xi\ ,\cr
+		y(z_{\rm RP}) =& L_y(z_{\rm RP})\, \theta_y^*\ +\ v_y(z_{\rm RP})\, y^*\ +\ D_y(z_{\rm RP})\, \xi \quad
+	\end{aligned}
 \end{equation}
 relative to the beam centre. This position is determined by the optical functions, characterising the transport of protons in the beam line and controlled via 
 the LHC magnet currents.
