--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -27,8 +27,8 @@ The amplitude describing elastic scattering of protons may be expected to receiv
 The Coulomb amplitude can be calculated from QED (e.g.~\cite{block96}), using empirical electric ${\cal F}_{\rm E}$ and magnetic ${\cal F}_{\rm M}$ form factors of the proton. It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$:
 \begin{equation}
 \label{eq:coul cs}
-	{\d\sigma^{\rm C}\over \d t} = {4\pi\alpha^2\over t^2}\,{\cal F}^4\ ,\qquad 
-	{\cal F}^2 = {{\cal F}_{\rm E}^2 + \tau {\cal F}_{\rm M}^2\over 1 + \tau}\ ,\qquad 
+	{\d\sigma^{\rm C}\over \d t} = {4\pi\alpha^2\over t^2}\,{\cal F}^4\ ,\ 
+	{\cal F}^2 = {{\cal F}_{\rm E}^2 + \tau {\cal F}_{\rm M}^2\over 1 + \tau}\ ,\ 
 	\tau = {|t|\over 4m^2}\ ,
 \end{equation}
 where $\alpha$ is the fine-structure constant and $m$ represents the proton mass.
@@ -75,7 +75,10 @@ It leads to a strict proportionality between the real and the imaginary part of 
 The {\bf standard phase} parametrisation,
 \begin{equation}
 \label{eqn:nuc phase std}
-\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho + \arctan \left(\frac{|t|-|t_{0}|}{\tau}\right) -  \arctan \left(\frac{-|t_{0}|}{\tau}\right) \: ,
+	\begin{aligned}
+		\arg {\cal A}^{\rm N}(t) =	& {\pi\over 2} - \arctan\rho + \arctan \left(\frac{|t|-|t_{0}|}{\tau}\right)\cr
+									&- \arctan \left(\frac{-|t_{0}|}{\tau}\right) \: ,
+	\end{aligned}
 \end{equation}
 describes the main features of many theoretical models -- almost imaginary amplitude in the forward direction ($\rho$ small) while almost purely real at the diffraction dip. The parameter values $t_0 = - 0.50\un{GeV^2}$ and $\tau = 0.1\un{GeV^2}$ have been chosen such that the shape is similar to a number of model predictions, see Figure~\ref{fig:phase illustration}.
 
@@ -127,8 +130,11 @@ It should be noted that the nuclear phase has a strong influence on the amplitud
 The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} was derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (essentially unknown), a very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus was assumed constant (i.e.~only the $b_1$ parameter is non-zero in the parametrisation Eq.~(\ref{eq:nuc mod})) which is formally incompatible with the existence of the diffractive minimum. The original formula did not contain the electromagnetic form factor ${\cal F}$, which was added later by hand:
 \begin{equation}
 \label{eq:int swy}
-	{\d\sigma\over \d t}^{\rm C+N} = {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2 \e^{\I\alpha \Phi(t)} + {\cal A}^{\rm N} \right |^2\ ,\qquad
-	\Phi(t) = - \left( \log {b_1 |t|\over 2} + \gamma \right)\ ,
+	\begin{aligned}
+		{\d\sigma\over \d t}^{\rm C+N} =& {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2 \e^{\I\alpha \Phi(t)} + {\cal A}^{\rm N}
+			\right |^2\ ,\cr
+		\Phi(t) =& - \left( \log {b_1 |t|\over 2} + \gamma \right)\ ,\cr
+	\end{aligned}
 \end{equation}
 where $\alpha$ is the fine-structure constant and $\gamma \doteq 0.577$ the Euler constant. Despite the many limitations, the formula has been extensively used in past data analyses. For backward-comparison reasons it is also considered in this report.
 
@@ -136,11 +142,11 @@ The approach of {\bf Cahn} \cite{cahn82} uses an impact parameter formalism and 
 \begin{equation}
 \label{eq:int cahn}
 	\begin{aligned}
-		{\d\sigma\over \d t}^{\rm C+N} &= {\pi (\hbar c)^2 \over s p^2} \left | -{\alpha s\over q^2} {\cal F}^2
+		{\d\sigma\over \d t}^{\rm C+N} =& {\pi (\hbar c)^2 \over s p^2} \left | -{\alpha s\over q^2} {\cal F}^2
 			+ {\cal A}^{\rm N}\, \Big[1 - \I\alpha G(-q^2)\Big] \right |^2\ ,\cr
-		G(-q^2) &= - \int\limits_0^\infty \d q'^2 \log {q'^2\over q^2} {\d\phantom{q'^2}\over \d q'^2} {\cal F}^2(-q^2)
-					+ {1\over\pi} \int\d^2 q' {{\cal F}^2(-q'^2)\over q'^2} \left[ {{\cal A}^{\rm N}\left(-[\vec{q} - \vec{q'}]^2\right) \over {\cal A}^{\rm N}(-q^2)} - 1 \right]
-			\ , \cr
+		G(-q^2) =& - \int\limits_0^\infty \d q'^2 \log {q'^2\over q^2} {\d\phantom{q'^2}\over \d q'^2} {\cal F}^2(-q^2)\cr
+				&+ {1\over\pi} \int\d^2 q' {{\cal F}^2(-q'^2)\over q'^2} \left[ {{\cal A}^{\rm N}\left(-[\vec{q} - \vec{q'}]^2\right) \over
+					{\cal A}^{\rm N}(-q^2)} - 1 \right]\ , \cr
 	\end{aligned}
 \end{equation}
 where $t=-q^2$, $\vec{q'}$ is a two-dimensional vector and $q'^2 = |\vec{q'}|^2$. The second part of the article gives simplified formulae for nuclear amplitudes with purely-exponential modulus and constant phase and is, thus, of limited interest for the present analysis.
@@ -151,13 +157,12 @@ Note that some recent publications by the same authors (e.g.~\cite{kl05,kklp11})
 \begin{equation}
 \label{eq:int kl}
 	\begin{aligned}
-		{\d\sigma\over \d t}^{\rm C+N} &= {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2
+		{\d\sigma\over \d t}^{\rm C+N} =& {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2
 			+ {\cal A}^{\rm N}\, \Big[1 - \I\alpha G(t)\Big] \right |^2\ ,\cr
-		G(t) &= 
-			\int\limits_{-4p^2}^0 \d t'\, \log {t'\over t} {\d\phantom{t'}\over \d t'} {\cal F}^2(t')
-			- \int\limits_{-4p^2}^0 \d t' \left( {{\cal A}^{\rm N}(t') \over {\cal A}^{\rm N}(t)} - 1 \right) { I(t, t')\over 2\pi }
-			\ , \cr
-		I(t, t') &= \int_0^{2\pi} \d\phi\ {{\cal F}^2(t'')\over t''}\ ,\qquad t'' = t + t' + 2\sqrt{t\, t'} \cos\phi\ .\cr
+		G(t) =& \int\limits_{-4p^2}^0 \d t'\, \log {t'\over t} {\d\phantom{t'}\over \d t'} {\cal F}^2(t')\cr
+			  &- \int\limits_{-4p^2}^0 \d t' \left( {{\cal A}^{\rm N}(t') \over {\cal A}^{\rm N}(t)} - 1 \right) { I(t, t')\over 2\pi }\ , \cr
+		I(t, t') =& \int_0^{2\pi} \d\phi\ {{\cal F}^2(t'')\over t''}\ ,\cr
+		t'' =& t + t' + 2\sqrt{t\, t'} \cos\phi\ .\cr
 	\end{aligned}
 \end{equation}
 A slightly different variant proposed in Eq.~(22) in~\cite{kl05} was considered, too:
@@ -197,9 +202,11 @@ In addition to using the data from Table~\ref{tab:data}, one might consider incl
 The standard least-squares method was used for all the fits. In particular, minimising
 \begin{equation}
 \label{eq:chi sq A}
-	\chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\qquad
-	\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {\d\sigma^{\rm C+N}\over\d t}\left(t^{\rm rep}_{{\rm bin}\ i}\right)\ ,\qquad
-	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
+	\begin{aligned}
+		\chi^2 &= \Delta^\T \mat V^{-1} \Delta\ ,\quad
+			\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {\d\sigma^{\rm C+N}\over\d t}\left(t^{\rm rep}_{{\rm bin}\ i}\right)\ ,\cr
+		\mat V &= \mat V_{\rm stat} + \mat V_{\rm syst}\ ,\cr
+	\end{aligned}
 \end{equation}
 where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at the representative point $t^{\rm rep}$ of each bin~\cite{lafferty94}. The minimisation is repeated several times, and the representative points are updated between iterations. The CNI effects are calculated using the computer code from~\cite{elegent}. The covariance matrix $\mat V$ has two components. The diagonal of $\mat V_{\rm stat}$ contains the statistical uncertainty squared from Table~\ref{tab:data} and from the Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except the normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. For improved fit stability, the normalisation uncertainty is not included in the $\chi^2$ definition. Instead, the uncertainty is propagated for each fit parameter. For this purpose, the fit is repeated with $-1\un{\sigma}$, $0\un{\sigma}$ and $+1\un{\sigma}$ biases independently in: global normalisation ($1\un{\sigma} = 4.2\un{\%}$), $90\un{m}$ data normalisation ($0.08\un{\%}$) and $1000\un{m}$ data normalisation ($0.25\un{\%}$). This gives a sample of 27 fit results, from which one can estimate the propagated normalisation uncertainty of a parameter as $(\hbox{max} - \hbox{min})/2$, where ``max'' (``min'') is the greatest (smallest) value in the sample. This normalisation uncertainty is, at the end, added quadratically to the uncertainty reported by the fit with no bias.
 
@@ -239,16 +246,16 @@ Note that unlike all previous total cross-section determinations at LHC, in this
 
 The goal of this section is to test whether the data are compatible with a purely exponential nuclear modulus, i.e.~$N_b=1$ in Eq.~(\ref{eq:nuc mod}). In other words, the non-exponentiality is forced to originate from the Coulomb-induced effects. The fit results obtained with the KL and (where applicable) SWY formulae are summarised in Table~\ref{tab:fit exp1} and graphically shown in Fig.~\ref{fig:fit exp1}.
 
-\begin{table}
+\begin{table*}
 \caption{Fit results with $N_b=1$. Each column corresponds to a fit with different interference formula and/or nuclear phase.}
 \vskip-3mm
 \label{tab:fit exp1}
 \begin{center}
 \setlength\tabcolsep{2.5mm}
-\small
+%\small
 \input fig/fit_exp1/table_data.tex
 \end{center}
-\end{table}
+\end{table*}
 
 \begin{figure*}
 \begin{center}
@@ -301,16 +308,16 @@ As shown in Table~\ref{tab:fit exp3}, both fits have reasonable fit quality and 
 Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very different in the fits. It is much stronger in the case of the peripheral-phase, which can be expected as this phase features a faster variation in the low-$|t|$ region.
 
 
-\begin{table}
+\begin{table*}
 \caption{Fit results with Cahn or KL formula and $N_b=3$.}
 \vskip-3mm
 \label{tab:fit exp3}
 \begin{center}
 \setlength\tabcolsep{5mm}
-\small
+%\small
 \input fig/fit_exp3/table_data.tex
 \end{center}
-\end{table}
+\end{table*}
 
 \begin{figure*}
 \begin{center}
@@ -342,20 +349,23 @@ The total cross-section results from the two fits in Table~\ref{tab:fit exp3} ar
 It is interesting to study the fit behaviour in the impact-parameter space. The scattering amplitude in this representation (sometimes called profile function), ${\cal P}(b)$, can be obtained from the nuclear amplitude by means of Fourier-Bessel transformation (see e.g.~\cite{klk02}):
 \begin{equation}
 \label{eq:prof fun}
-	{\cal P}(b) = {1\over 4 p \sqrt s} \int\limits_{-\infty}^0 \d t\,J_0\left(b\sqrt{-t}\over \hbar c\right)\,{\cal A}^{\rm N}(t)\ ,\qquad
-	\hbox{normalised that } {\sigma_{\rm el} = 8\pi \int\limits_0^{+\infty} b\, \d b\, |{\cal P}(b)|^2}\ ,
+	\begin{aligned}
+		&{\cal P}(b) = {1\over 4 p \sqrt s} \int\limits_{-\infty}^0 \d t\,J_0\left(b\sqrt{-t}\over \hbar c\right)\,{\cal A}^{\rm N}(t)\ ,\cr
+		&\hbox{normalised that } {\sigma_{\rm el} = 8\pi \int\limits_0^{+\infty} b\, \d b\, |{\cal P}(b)|^2}\ ,\cr
+	\end{aligned}
 \end{equation}
 where $\sigma_{\rm el}$ is the integrated elastic cross-section. The profile functions for the two fits from Table~\ref{tab:fit exp3} are shown in Figure~\ref{fig:bdist exp3}. The fit with constant nuclear phase gives a distribution peaked at $b=0$. It corresponds to a behaviour that is more central than for the fit with peripheral phase, where the amplitude modulus reaches maximum at $b\approx 1.2\un{fm}$. These considerations can be extended to inelastic channels. Following Section~3 in~\cite{klk02}, one can calculate the mean values of $b^2$ for elastic ($\langle b^2\rangle_{\rm el}$), inelastic ($\langle b^2\rangle_{\rm inel}$) or all ($\langle b^2\rangle_{\rm tot}$) collisions:
 \begin{equation}
 \label{eq:ms b}
-	\langle b^2\rangle_j = {
-		\int b\,\d b\,b^2\, h_j(b)
-		\over
-		\int b\,\d b\, h_j(b)
-	}\ ,\ 
-	h_{\rm el}(b) = |{\cal P}(b)|^2\ ,\ 
-	h_{\rm tot}(b) = \Im {\cal P}(b)\ ,\ 
-	h_{\rm inel}(b) = h_{\rm tot}(b) - h_{\rm el}(b)\ .
+	\begin{aligned}
+		\langle b^2\rangle_j &= {
+			\int b\,\d b\,b^2\, h_j(b)
+			\over
+			\int b\,\d b\, h_j(b)
+		}\ ,\qquad h_{\rm el}(b) = |{\cal P}(b)|^2\cr
+		h_{\rm tot}(b) &= \Im {\cal P}(b)\ ,\qquad
+		h_{\rm inel}(b) = h_{\rm tot}(b) - h_{\rm el}(b)\ .\cr
+	\end{aligned}
 \end{equation}
 Their values reproduced in Figure~\ref{fig:bdist exp3} indicate that the fit with constant nuclear phase leads to a picture with elastic collisions more central than the inelastic ones. The hierarchy is inverted for the fit with peripheral phase.
 
