--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -333,14 +333,14 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \end{figure*}
 
 
-\begin{figure*}
+\begin{figure}
 \begin{center}
 \includegraphics{fig/rho_s.pdf}
 \caption{Energy dependence of the $\rho$ parameter. The blue (green) triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} -- note that most of these points were determined with the help of the SWY formula, shown to be inconsistent with the present data. The hollow red circle stands for the earlier indirect determination by TOTEM~\cite{epl101-tot}. The filled red circle represents the two results from Table~\ref{tab:fit exp3} which are numerically identical within the resolution. The black curve gives the preferred $\rm pp$ model by COMPETE~\cite{compete}, obtained without using LHC data.
 }%
 \label{fig:rho cmp exp3}
 \end{center}
-\end{figure*}
+\end{figure}
 
 
 The total cross-section results from the two fits in Table~\ref{tab:fit exp3} are well consistent with each other and also with previous measurements \cite{8tev-90m,prl111}. The slightly higher values with respect to previous analyses neglecting the Coulomb interaction are expected as long as $\rho > 0$. This gives negative interference at low $|t|$ and when separated leads to an increase of nuclear cross-section intercept $a$ and thus also total cross-section via Eq.~(\ref{eq:si tot}).
