--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -371,7 +371,7 @@ Their values reproduced in Figure~\ref{fig:bdist exp3} indicate that the fit wit
 
 
 
-\begin{figure*}
+\begin{figure}
 \begin{center}
 \includegraphics{fig/fit_exp3/b_dist.pdf}
 \caption{%
@@ -379,6 +379,6 @@ Square of the impact-parameter amplitude, ${\cal P}$, as a function of impact pa
 }%
 \label{fig:bdist exp3}
 \end{center}
-\end{figure*}
+\end{figure}
 
 
