--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -26,11 +26,11 @@ Optical functions for elastic proton transport for the $\beta^{*} = 1000\,$m opt
 \label{tab:optics}
 \begin{center}
 \vskip-3mm
-\begin{tabular}{ccccc}\hline\hline
+\begin{tabular}{ccccc}\hline
 RP unit & $L_x$ & $v_x$ & $L_y$ & $v_y$ \cr\hline
 near & $59.37\un{m}$  & $-0.867$ & $255.87\un{m}$ & $0.003$ \cr
 far  & $45.89\un{m}$ & $-0.761$ & $284.62\un{m}$ & $-0.017$ \cr
-\hline\hline
+\hline
 \end{tabular}
 \end{center}
 \end{table}
