--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -19,17 +19,15 @@ The elastic differential cross-section as determined in this analysis. The three
 %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
 The other columns are related to the differential cross-section. The six right-most columns give the leading systematic biases in $\d\sigma/\d t$ for $1\sigma$-shifts in the respective quantities, $\delta s_q$, see Eqs.~(\ref{eq:syst mode}) and (\ref{eq:covar mat}). The two contributions due to optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}).
 }%
-\vskip-5mm
+%\vskip-5mm
 \label{tab:data}
 \begin{center}
 %\small
-\footnotesize
+%\footnotesize
 %\scriptsize
-% TODO: use custom size?? 9pt would be good!
-\setlength{\tabcolsep}{3.5pt}
+\setlength{\tabcolsep}{5pt}
 \def\arraystretch{0.8}
 \begin{tabular}{ccc@{\hskip15pt}ccccccccc}
-\hline
 \hline
 \tableHeader
 \hline
@@ -64,7 +62,6 @@ $0.1661\S\S$ & $0.1761\S\S$ & $0.1710\S\S$ & $\S18.95$ & $\S0.68$ & $\S0.84$ & $
 $0.1761\S\S$ & $0.1861\S\S$ & $0.1810\S\S$ & $\S15.86$ & $\S0.73$ & $\S0.69$ & $+\S0.67$ & $+0.082$ & $-0.056$ & $-0.079$ & $+0.111$ & $+\S0.000$ \cr
 $0.1861\S\S$ & $0.1961\S\S$ & $0.1910\S\S$ & $\S12.59$ & $\S0.77$ & $\S0.58$ & $+\S0.55$ & $+0.054$ & $-0.049$ & $-0.071$ & $+0.123$ & $+\S0.000$ \cr
 %$0.1961\S\S$ & $0.2061\S\S$ & $0.2010\S\S$ & $\S10.55$ & $\S0.82$ & $\S0.48$ & $+\S0.45$ & $+0.034$ & $-0.043$ & $-0.063$ & $+0.126$ & $+\S0.000$ \cr
-\hline
 \hline
 \end{tabular}
 \end{center}
