--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -167,12 +167,12 @@ where $\Delta t$ is the width of the bin, ${\cal N}$ is a normalisation factor a
 }
 \label{tab:cuts}
 \begin{center}
-\vskip-3mm
-\begin{tabular}{ccc}\hline\hline
+%\vskip-3mm
+\begin{tabular}{ccc}\hline
 number & cut & RMS ($\equiv 1\sigma$)\cr\hline
 1 & $\theta_x^{*\rm R} - \theta_x^{*\rm L}$				& $3.9\un{\mu rad}$	\cr
 2 & $\theta_y^{*\rm R} - \theta_y^{*\rm L}$				& $1.0\un{\mu rad}$	\cr
-3 & $x^{*\rm R} - x^{*\rm L} - \alpha \theta_x^*$		& $250\un{\mu m}$ 	\cr\hline\hline
+3 & $x^{*\rm R} - x^{*\rm L} - \alpha \theta_x^*$		& $250\un{\mu m}$ 	\cr\hline
 \end{tabular}
 \end{center}
 \end{table}
