--- a/2013/1km paper/fig/fit_exp3/table_data.tex
+++ b/2013/1km paper/fig/fit_exp3/table_data.tex
@@ -1,5 +1,5 @@
-\begin{tabular}{lccc}\hline\hline
-										& Cahn/KL, constant		& Cahn/KL, peripheral	\cr\hline\hline
+\begin{tabular}{lccc}\hline
+										& Cahn/KL, constant		& Cahn/KL, peripheral	\cr\hline
 $\hbox{step 1:}\, \chi^2/\hbox{ndf}$	& $ 25.7/ 25 = 1.03$	& $ 25.0/ 25 = 1.00$	\cr
 $\hbox{step 2:}\, \chi^2/\hbox{ndf}$	& $ 57.5/ 56 = 1.03$	& $ 57.6/ 56 = 1.03$	\cr
 \hline
@@ -14,5 +14,5 @@ $\kappa$								&					 	& $2.311$		   		\cr
 $\nu\ung{GeV^{-2}}$						&					 	& $8.161$		   		\cr
 \hline
 $\sigma_{\rm tot}\ung{mb}$				& $102.9 \pm  2.3$		& $103.0 \pm  2.3$		\cr
-\hline\hline
+\hline
 \end{tabular}
